--- a/HealthAppStoryBoard1/Resources/Info.plist
+++ b/HealthAppStoryBoard1/Resources/Info.plist
@@ -20,10 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses your camera set profile pic</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app uses the photo library to set the profile pic</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Dashboard</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -39,9 +43,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>This app uses your camera set profile pic</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app uses the photo library to set the profile pic</string>
 </dict>
 </plist>
